--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Odin Recipe</title>
+        <title>Simple Recipes</title>
     </head>
     <body>
-        <h1>Odin Recipes</h1>
+        <h1>Simple Recipes</h1>
         <p>
             <h3>
                 <ul>
