--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
                 <ul>
                     <li><a href="./odin-recipes/butter-chicken.html">Butter Chicken</a></li>
                     <li><a href="./odin-recipes/chicken-quesadilla.html">Microwave Chicken Quesadilla</a></li>
+                    <li><a href="./odin-recipes/egg-roll-mozzarella-sticks.html">Egg Roll Mozzarella Sticks</a></li>
                 </ul>
             </h3>
         </p>
