Added CSS to home page

--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
     <head>
         <meta charset="UTF-8">
         <title>Simple Recipes</title>
+        <link rel="stylesheet" href="./style.css">
+        
     </head>
     <body>
-        <h1>Simple Recipes</h1>
-        <p>
-            <h3>
-                <ul>
-                    <li><a href="./recipes/butter-chicken.html">Butter Chicken</a></li>
-                    <li><a href="./recipes/chicken-quesadilla.html">Microwave Chicken Quesadilla</a></li>
-                    <li><a href="./recipes/egg-roll-mozzarella-sticks.html">Egg Roll Mozzarella Sticks</a></li>
+        <h1 class="heading">Simple Recipes</h1>
+        <div class="links-container">
+                <ul class="recipe-list">
+                    <li class="recipe-list-item"> <a href="./recipes/butter-chicken.html">Butter Chicken</a></li>
+                    <li class="recipe-list-item"> <a href="./recipes/chicken-quesadilla.html">Microwave Chicken Quesadilla</a></li>
+                    <li class="recipe-list-item"> <a href="./recipes/egg-roll-mozzarella-sticks.html">Egg Roll Mozzarella Sticks</a></li>
                 </ul>
-            </h3>
-        </p>
+        </div>
     </body>
 </html>
