--- a/recipes/butter-chicken.html
+++ b/recipes/butter-chicken.html
@@ -3,10 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <title>Butter Chicken</title>
+        <link rel="stylesheet" href="../recipe-style.css">
     </head>
     <body>
         <h1>Butter Chicken</h1>
-        <img src="../img/butter chicken.jpg" width="640" height="360" alt="Butter Chicken">
+        <img class="recipe-image" src="../img/butter chicken.jpg" alt="Butter Chicken">
 
         <h2>Description</h2>
         <p>
