--- a/recipes/chicken-quesadilla.html
+++ b/recipes/chicken-quesadilla.html
@@ -3,10 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <title>Microwave Chicken Quesadilla</title>
+        <link rel="stylesheet" href="../recipe-style.css">
     </head>
     <body>
         <h1>Microwave Chicken Quesadilla</h1>
-        <img src="../img/Chicken-Quesadillas.jpg" width="640" height="360" alt="Chicken Quesadilla">
+        <img class="recipe-image" src="../img/Chicken-Quesadillas.jpg" alt="Chicken Quesadilla">
         <h2>Description</h2>
         <p>
             A quesadilla is a Mexican dish that consists of a tortilla filled with cheese
