--- a/recipes/egg-roll-mozzarella-sticks.html
+++ b/recipes/egg-roll-mozzarella-sticks.html
@@ -3,10 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <title>Egg Roll Mozzarella Sticks</title>
+        <link rel="stylesheet" href="../recipe-style.css">
     </head>
     <body>
         <h1>Egg Roll Mozzarella Sticks</h1>
-        <img src="../img/egg-roll.jpg" width="640" height="360" alt="Egg Roll Mozzarella Sticks">
+        <img class="recipe-image" src="../img/egg-roll.jpg" alt="Egg Roll Mozzarella Sticks">
         <h2>Description</h2>
         <p>
             Mozzarella sticks are elongated pieces of battered or breaded mozzarella,
