--- a/recipes/egg-roll-mozzarella-sticks.html
+++ b/recipes/egg-roll-mozzarella-sticks.html
@@ -6,34 +6,38 @@
         <link rel="stylesheet" href="../recipe-style.css">
     </head>
     <body>
-        <h1>Egg Roll Mozzarella Sticks</h1>
-        <img class="recipe-image" src="../img/egg-roll.jpg" alt="Egg Roll Mozzarella Sticks">
-        <h2>Description</h2>
-        <p>
-            Mozzarella sticks are elongated pieces of battered or breaded mozzarella,
-            <br>
-             usually served as hors d'oeuvre.
-        </p>
-        <h2>Ingredients</h2>
-        <ul>
-            <li>5 egg roll wrappers</li>
-            <li>10 sticks string cheese</li>
-            <li>Water</li>
-            <li>Oil, for frying</li>
-            <li>Marinara sauce</li>
-        </ul>
-        <h2>Instructions</h2>
-        <ol type="1">
-            <li>Slice the egg roll wrappers in half.</li>
-            <li>Place a stick of string cheese on the edge of the egg roll wrapper,
-                <br>
-                then fold the sides of the wrapper over the ends of the cheese.</li>
-            <li>Wet the other edge of the wrapper with water, then roll it up tightly,
-                <br>
-                pressing the edge to make sure it’s sealed.</li>
-            <li>Heat oil in a pot.</li>
-            <li>Fry the sticks until golden brown, then drain on a paper towel. </li>
-            <li>Serve with marinara.</li>
-        </ol>
+        <div class="recipe-container">
+            <div class="text-box">
+                <h1 class="recipe-name">Egg Roll Mozzarella Sticks</h1>
+                <h2 class="recipe-description-heading">Description</h2>
+                <p class="recipe-description-text">
+                    Mozzarella sticks are elongated pieces of battered or breaded mozzarella,
+                    <br>
+                    usually served as hors d'oeuvre.
+                </p>
+                <h2 class="recipe-ingredients-heading">Ingredients</h2>
+                <ul class="recipe-ingredients-list">
+                    <li>5 egg roll wrappers</li>
+                    <li>10 sticks string cheese</li>
+                    <li>Water</li>
+                    <li>Oil, for frying</li>
+                    <li>Marinara sauce</li>
+                </ul>
+                <h2 class="recipe-instruction-heading">Instructions</h2>
+                <ol type="1" class="recipe-instruction-list">
+                    <li>Slice the egg roll wrappers in half.</li>
+                    <li>Place a stick of string cheese on the edge of the egg roll wrapper,
+                        <br>
+                        then fold the sides of the wrapper over the ends of the cheese.</li>
+                    <li>Wet the other edge of the wrapper with water, then roll it up tightly,
+                        <br>
+                        pressing the edge to make sure it’s sealed.</li>
+                    <li>Heat oil in a pot.</li>
+                    <li>Fry the sticks until golden brown, then drain on a paper towel. </li>
+                    <li>Serve with marinara.</li>
+                </ol>
+            </div>
+            <img class="recipe-image" src="../img/egg-roll.jpg" alt="Egg Roll Mozzarella Sticks">
+        </div>
     </body>
 </html>
