--- a/recipes/chicken-quesadilla.html
+++ b/recipes/chicken-quesadilla.html
@@ -6,33 +6,37 @@
         <link rel="stylesheet" href="../recipe-style.css">
     </head>
     <body>
-        <h1>Microwave Chicken Quesadilla</h1>
-        <img class="recipe-image" src="../img/Chicken-Quesadillas.jpg" alt="Chicken Quesadilla">
-        <h2>Description</h2>
-        <p>
-            A quesadilla is a Mexican dish that consists of a tortilla filled with cheese
-            <br>
-            (and often other ingredients, such as meat and veggies). 
-        </p>
-        <h2>Ingredients</h2>
-        <ul>
-            <li>2 medium flour tortillas</li>
-            <li>½ cup chicken strip(60 g), or shredded chicken, cooked</li>
-            <li>½ bell pepper, diced</li>
-            <li>1 tablespoon taco seasoning</li>
-            <li>¼ cup shredded cheddar cheese(25 g)</li>
-        </ul>
-        <h2>Instructions</h2>
-        <ol type="1">
-            <li>Microwave the tortillas on a plate until slightly crispy.
-                <br>
-                They will dry out a bit as they cool.</li>
-            <li>Mix the chicken, peppers, and taco seasoning in a bowl until evenly combined,
-                <br>
-                then cook for about 1-2 minutes until the peppers are soft.</li>
-            <li>Spread the mixture evenly on one tortilla, cover evenly with the cheese,
-                <br>
-                then top with the other tortilla.</li>
-        </ol>
+        <div class="recipe-container">
+            <div class="text-box">
+                <h1 class="recipe-name">Microwave Chicken Quesadilla</h1>
+                <h2 class="recipe-description-heading">Description</h2>
+                <p class="recipe-description-text">
+                    A quesadilla is a Mexican dish that consists of a tortilla filled with cheese
+                    <br>
+                    (and often other ingredients, such as meat and veggies). 
+                </p>
+                <h2 class="recipe-ingredients-heading">Ingredients</h2>
+                <ul class="recipe-ingredients-list">
+                    <li>2 medium flour tortillas</li>
+                    <li>½ cup chicken strip(60 g), or shredded chicken, cooked</li>
+                    <li>½ bell pepper, diced</li>
+                    <li>1 tablespoon taco seasoning</li>
+                    <li>¼ cup shredded cheddar cheese(25 g)</li>
+                </ul>
+                <h2 class="recipe-instruction-heading">Instructions</h2>
+                <ol type="1" class="recipe-instruction-list">
+                    <li>Microwave the tortillas on a plate until slightly crispy.
+                        <br>
+                        They will dry out a bit as they cool.</li>
+                    <li>Mix the chicken, peppers, and taco seasoning in a bowl until evenly combined,
+                        <br>
+                        then cook for about 1-2 minutes until the peppers are soft.</li>
+                    <li>Spread the mixture evenly on one tortilla, cover evenly with the cheese,
+                        <br>
+                        then top with the other tortilla.</li>
+                </ol>
+            </div>
+            <img class="recipe-image" src="../img/Chicken-Quesadillas.jpg" alt="Chicken Quesadilla">
+        </div>        
     </body>
 </html>
