Update homepage style

--- a/index.html
+++ b/index.html
@@ -7,13 +7,40 @@
         
     </head>
     <body>
-        <h1 class="heading">Simple Recipes</h1>
-        <div class="links-container">
-                <ul class="recipe-list">
-                    <li class="recipe-list-item"> <a href="./recipes/butter-chicken.html">Butter Chicken</a></li>
-                    <li class="recipe-list-item"> <a href="./recipes/chicken-quesadilla.html">Microwave Chicken Quesadilla</a></li>
-                    <li class="recipe-list-item"> <a href="./recipes/egg-roll-mozzarella-sticks.html">Egg Roll Mozzarella Sticks</a></li>
-                </ul>
+        <header class="header">
+            <div class="container">
+                <div class="logo">Simple Recipe</div>
+            </div>
+        </header>
+
+        <div class="heading">
+            <div class="container">
+                <p>Make this for DINNER!</p>
+            </div>
         </div>
+
+        <section class="cards">
+            <div class="container">
+                <div class="card">
+                    <a href="./recipes/veggie-noodles.html">
+                        <img src="./img/noodles.jpg" alt="" class="recipe-image">
+                        <p class="recipe-name">Veggie Garlic Noodles</p>
+                    </a>
+                </div>
+                <div class="card">
+                    <a href="./recipes/butter-chicken.html">
+                        <img src="./img/butter-chicken.jpg" alt="" class="recipe-image">
+                        <p class="recipe-name">Butter Chicken</p>
+                    </a>
+                </div>
+                <div class="card">
+                    <a href="./recipes/shakshuka.html">
+                        <img src="./img/shakshuka.jpg" alt="" class="recipe-image">
+                        <p class="recipe-name">Chickpea Shakshuka</p>
+                    </a>
+                </div>
+            </div>
+        </section>
+        
     </body>
 </html>
