Redesigned recipes page

--- a/recipes/shakshuka.html
+++ b/recipes/shakshuka.html
@@ -2,42 +2,95 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Egg Roll Mozzarella Sticks</title>
+        <title>Shakshuka</title>
         <link rel="stylesheet" href="../recipe-style.css">
+        <link rel="icon" type="image/x-icon" href="../img/logo.png">
     </head>
     <body>
-        <div class="recipe-container">
-            <div class="text-box">
-                <h1 class="recipe-name">Egg Roll Mozzarella Sticks</h1>
-                <h2 class="recipe-description-heading">Description</h2>
-                <p class="recipe-description-text">
-                    Mozzarella sticks are elongated pieces of battered or breaded mozzarella,
-                    <br>
-                    usually served as hors d'oeuvre.
-                </p>
-                <h2 class="recipe-ingredients-heading">Ingredients</h2>
-                <ul class="recipe-ingredients-list">
-                    <li>5 egg roll wrappers</li>
-                    <li>10 sticks string cheese</li>
-                    <li>Water</li>
-                    <li>Oil, for frying</li>
-                    <li>Marinara sauce</li>
-                </ul>
-                <h2 class="recipe-instruction-heading">Instructions</h2>
-                <ol type="1" class="recipe-instruction-list">
-                    <li>Slice the egg roll wrappers in half.</li>
-                    <li>Place a stick of string cheese on the edge of the egg roll wrapper,
-                        <br>
-                        then fold the sides of the wrapper over the ends of the cheese.</li>
-                    <li>Wet the other edge of the wrapper with water, then roll it up tightly,
-                        <br>
-                        pressing the edge to make sure it’s sealed.</li>
-                    <li>Heat oil in a pot.</li>
-                    <li>Fry the sticks until golden brown, then drain on a paper towel. </li>
-                    <li>Serve with marinara.</li>
-                </ol>
+        <header class="header">
+            <div class="container">
+                <p>Shakshuka</p>
             </div>
-            <img class="recipe-image" src="../img/egg-roll.jpg" alt="Egg Roll Mozzarella Sticks">
-        </div>
+        </header>
+
+        <section class="recipe-info">
+            <div class="container">
+                <img src="../img/shakshuka.jpg" alt="">
+                <div class="recipe-description">
+                    <p>
+                        Shakshuka is a simple dish made of gently poached eggs in a delicious chunky tomato and bell pepper sauce. 
+                        Said to have originated in Tunisia, this breakfast recipe is popular in many parts of North Africa and the Middle East. 
+                        It is so satisfying, you can serve it for breakfast, lunch, or dinner.
+                    </p>
+                </div>
+            </div>
+        </section>
+
+        <section class="recipe-details">
+            <div class="container">
+                <div class="instructions">
+                    <p>Instructions</p>
+                    <ul>
+                        <li>Heat the olive oil in a 10-inch skillet over medium heat until it shimmers. Add the onion, garlic, and red bell pepper, and sauté until tender, about 8 minutes. 
+                            Stir in the McCormick® Ground Paprika, McCormick® Smoked Paprika, McCormick® Ground Cumin, McCormick® Ground Cayenne, McCormick® Gourmet Organic Ground Coriander, McCormick® Crushed Red Pepper, 
+                            and salt, and cook until fragrant, about 45 seconds.
+                        </li>
+                        <li>
+                            Add the crushed tomatoes and simmer for 2 minutes, stirring occasionally. Crack the eggs directly into the tomato sauce, spacing evenly. Cover the pan with a lid and cook for 30 seconds, 
+                            then uncover and continue cooking until the eggs 
+                            have set and the whites are fully cooked through, 2–3 minutes more.
+                        </li>
+                        <li>
+                            Remove the pan from the heat and garnish the shakshuka with feta and chopped cilantro. Serve warm with toasted pita bread.
+                        </li>
+                    </ul>
+                </div>
+                <div class="ingredients">
+                    <p>Ingredients</p>
+                    <ul>
+                        <li>
+                            3 tablespoons olive oil
+                        </li>
+                        <li>
+                            ½ medium yellow onion, thinly sliced
+                        </li>
+                        <li>
+                            3 garlic cloves, minced
+                        </li>
+
+                        <li>
+                            1 medium red bell pepper, seeded and sliced
+                        </li>
+                        <li>
+                            ½ teaspoon Ground Paprika
+                        </li>
+                        <li>
+                            ½ teaspoon Smoked Paprika
+                        </li>
+                        <li>
+                            ½ teaspoon ground cumin
+                        </li>
+                        <li>
+                            ¼ teaspoon Gourmet Organic Ground Coriander
+                        </li>
+                        <li>
+                            2 cups crushed tomatoes(400 g)
+                        </li>
+                        <li>
+                            2 large eggs
+                        </li>
+                        <li>
+                            ¼ cup crumbled feta cheese(65 g)
+                        </li>
+                        <li>
+                            3 tablespoons chopped fresh cilantro
+                        </li>
+                        <li>
+                            toasted pita bread, or naan, for serving
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section>
     </body>
 </html>
