--- a/recipes/veggie-noodles.html
+++ b/recipes/veggie-noodles.html
@@ -2,41 +2,78 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Microwave Chicken Quesadilla</title>
+        <title>Veggie Garlic Noodles</title>
         <link rel="stylesheet" href="../recipe-style.css">
+        <link rel="icon" type="image/x-icon" href="../img/logo.png">
     </head>
     <body>
-        <div class="recipe-container">
-            <div class="text-box">
-                <h1 class="recipe-name">Microwave Chicken Quesadilla</h1>
-                <h2 class="recipe-description-heading">Description</h2>
-                <p class="recipe-description-text">
-                    A quesadilla is a Mexican dish that consists of a tortilla filled with cheese
-                    <br>
-                    (and often other ingredients, such as meat and veggies). 
-                </p>
-                <h2 class="recipe-ingredients-heading">Ingredients</h2>
-                <ul class="recipe-ingredients-list">
-                    <li>2 medium flour tortillas</li>
-                    <li>½ cup chicken strip(60 g), or shredded chicken, cooked</li>
-                    <li>½ bell pepper, diced</li>
-                    <li>1 tablespoon taco seasoning</li>
-                    <li>¼ cup shredded cheddar cheese(25 g)</li>
-                </ul>
-                <h2 class="recipe-instruction-heading">Instructions</h2>
-                <ol type="1" class="recipe-instruction-list">
-                    <li>Microwave the tortillas on a plate until slightly crispy.
-                        <br>
-                        They will dry out a bit as they cool.</li>
-                    <li>Mix the chicken, peppers, and taco seasoning in a bowl until evenly combined,
-                        <br>
-                        then cook for about 1-2 minutes until the peppers are soft.</li>
-                    <li>Spread the mixture evenly on one tortilla, cover evenly with the cheese,
-                        <br>
-                        then top with the other tortilla.</li>
-                </ol>
+        <header class="header">
+            <div class="container">
+                <p>Veggie Garlic Noodles</p>
             </div>
-            <img class="recipe-image" src="../img/Chicken-Quesadillas.jpg" alt="Chicken Quesadilla">
-        </div>        
+        </header>
+
+        <section class="recipe-info">
+            <div class="container">
+                <img src="../img/noodles.jpg" alt="">
+                <div class="recipe-description">
+                    <p>
+                        This simple and satisfying recipe features tender noodles tossed in garlic, soy sauce, 
+                        and sesame oil, then topped with vegetables for a flavorful vegetarian meal.
+                    </p>
+                </div>
+            </div>
+        </section>
+
+        <section class="recipe-details">
+            <div class="container">
+                <div class="instructions">
+                    <p>Instructions</p>
+                    <ul>
+                        <li>Heat the vegetable oil in a large skillet over medium heat. Add the garlic and 3 green 
+                            onions and cook for 2–3 minutes, until fragrant and tender. Add the carrots and snap peas, 
+                            then stir in the brown sugar and soy sauce.
+                        </li>
+                        <li>
+                            Add the noodles and toss for a couple of minutes, until the noodles are well-coated and 
+                            the vegetables are tender. Season with salt and pepper.
+                        </li>
+                        <li>
+                            Serve immediately, garnished with the remaining green onion.
+                        </li>
+                    </ul>
+                </div>
+                <div class="ingredients">
+                    <p>Ingredients</p>
+                    <ul>
+                        <li>
+                            2 tablespoons vegetable oil(30 mL)
+                        </li>
+                        <li>
+                            5 cloves garlic, minced
+                        </li>
+                        <li>
+                            4 green onions, sliced, divided
+                        </li>
+
+                        <li>
+                            2 carrots, cut into matchsticks
+                        </li>
+                        <li>
+                            1 cup snap peas(100 g)
+                        </li>
+                        <li>
+                            2 tablespoons brown sugar
+                        </li>
+                        <li>
+                            3 tablespoons soy sauce
+                        </li>
+                        <li>
+                            9 oz dried rice noodles(250 g), cooked
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section>
     </body>
 </html>
