--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <title>Simple Recipes</title>
         <link rel="stylesheet" href="./style.css">
-        
+        <link rel="icon" type="image/x-icon" href="./img/logo.png">
     </head>
     <body>
         <header class="header">
@@ -36,7 +36,7 @@
                 <div class="card">
                     <a href="./recipes/shakshuka.html">
                         <img src="./img/shakshuka.jpg" alt="" class="recipe-image">
-                        <p class="recipe-name">Chickpea Shakshuka</p>
+                        <p class="recipe-name">Shakshuka</p>
                     </a>
                 </div>
             </div>
